--- a/autocomplete/index.html
+++ b/autocomplete/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="/autocomplete/autocomplete.js" type="text/javascript"></script>
-    </head>
-    <body>
-        <ui-autocomplete id="carcomplete">
-            <input type="autocomplete" placeholder="Autocomplete..." data-source="names"/>
-            <datalist id="names">
-                <option value="BMW"></option>
-                <option value="Audi"></option>
-                <option value="Mercedes"></option>
-                <option value="Mazda"></option>
-                <option value="Infinity"></option>
-            </datalist>
-        </ui-autocomplete>
-    </body>
+
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="/autocomplete/autocomplete.js" type="text/javascript"></script>
+</head>
+
+<body>
+    <h1 class="m-3">WebUI - Autocomplete</h1>
+    <h2 class="m-3">Basic Autocomplete Usage</h2>
+    <div class="row">
+        <form class="col-3 m-3">
+            <ui-autocomplete id="carcomplete" class="form-control">
+                <input type="autocomplete" placeholder="Autocomplete..." data-source="names" />
+                <datalist id="names">
+                    <option value="BMW"></option>
+                    <option value="Audi"></option>
+                    <option value="Mercedes"></option>
+                    <option value="Mazda"></option>
+                    <option value="Infinity"></option>
+                    <option value="Mazerati"></option>
+                    <option value="McLaren"></option>
+                    <option value="Mercury"></option>
+                    <option value="Mycelium"></option>
+                    <option value="Michael"></option>
+                    <option value="Mathematics"></option>
+                </datalist>
+            </ui-autocomplete>
+        </form>  
+    </div>
+    
+    <h3 class="m-3">Integrates easily with bootstrap</h3>
+    <div class="row">
+        <form class="col-3 m-3">
+            <div class="input-group mb-3">
+                <div class="input-group-text">
+                    <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Use this specialty">
+                </div>
+                <ui-autocomplete id="spec-autocomplete" class="form-control">
+                    <input type="autocomplete" placeholder="Choose a Specialty..." data-source="specs" />
+                    <datalist id="specs">
+                        <option value="Ophthalmology"></option>
+                        <option value="Orthopedic surgery"></option>
+                        <option value="Optometry"></option>
+                        <option value="Chiropractic"></option>
+                        <option value="Dentistry"></option>
+                    </datalist>
+                </ui-autocomplete>
+            </div>
+        </form>
+    </div>
+</body>
+
 </html>
